Update .hero-section styles in main.css by replacing responsive font-size and line-height with fixed values for improved consistency and readability.

--- a/main.css
+++ b/main.css
@@ -153,8 +153,10 @@ header.hidden {
   margin-bottom: 45px;
 }
 .hero-section p {
-  font-size:clamp(14px,2.5vw,18px);
-  line-height: 1.6;
+  /* font-size:clamp(14px,2.5vw,18px); */
+  /* line-height: 1.6; */
+  font-size: 18px;
+  line-height: 29px;
   font-weight: 400;
   color: var(--TEXT-P);
   margin-bottom: 38px;
